update verb name and fix linefeed issue on different os enviorment

--- a/BindingHelper/Properties/launchSettings.json
+++ b/BindingHelper/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "BindingHelper": {
       "commandName": "Project",
-      "commandLineArgs": "Tranform"
+      "commandLineArgs": "SwiftClassify -h SwiftSample-Swift.h -c ApiDefinition.cs"
     }
   }
 }
