--- a/BindingHelper/BindingHelper.csproj
+++ b/BindingHelper/BindingHelper.csproj
@@ -8,9 +8,10 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' " />
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.6.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Helper\" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="NLog" Version="4.6.8" />
+    <PackageReference Include="NLog.Config" Version="4.6.8" />
+    <PackageReference Include="NLog.Etw" Version="4.3.0" />
+    <PackageReference Include="NLog.Schema" Version="4.6.8" />
   </ItemGroup>
 </Project>
